By NiFi Registry user: anonymous

--- a/Git_repo/bucket.yml
+++ b/Git_repo/bucket.yml
@@ -1,4 +1,5 @@
 flows:
+  a343b275-6382-4789-8d92-aa6abbd10357: {ver: 1, file: flow2.snapshot}
   7b8772ad-5321-4103-a37b-0e70903e15a1: {ver: 1, file: Flow1.snapshot}
 layoutVer: 1
 bucketId: fb6ddbae-c752-4346-a2e1-2998a16ab4bc
